#!/usr/bin/env node

/**
 * ACT Cosmos Ledger Swarm Execution
 * Builds Web4 compliance on top of existing ModBatt Cosmos SDK blockchain
 * Works in /mnt/c/exe/projects/ai-agents/ACT/implementation/ledger/
 */

const fs = require('fs');
const path = require('path');
const { execSync } = require('child_process');

// Paths to actual ACT ledger implementation
const LEDGER_BASE = '/mnt/c/exe/projects/ai-agents/ACT/implementation/ledger';
const X_MODULE_PATH = path.join(LEDGER_BASE, 'x');
const PROTO_PATH = path.join(LEDGER_BASE, 'proto');
const APP_PATH = path.join(LEDGER_BASE, 'app');

// Existing modules to enhance
const MODULES = {
  lctmanager: path.join(X_MODULE_PATH, 'lctmanager'),
  trusttensor: path.join(X_MODULE_PATH, 'trusttensor'),
  energycycle: path.join(X_MODULE_PATH, 'energycycle'),
  componentregistry: path.join(X_MODULE_PATH, 'componentregistry'),
  pairingqueue: path.join(X_MODULE_PATH, 'pairingqueue')
};

// Web4 compliance tasks based on workplan
const WEB4_TASKS = {
  lct_enhancement: {
    module: 'lctmanager',
    tasks: [
      'Add Ed25519/X25519 cryptographic identity',
      'Implement MRH graph structure',
      'Add fractal context boundaries',
      'Implement proper entity type system',
      'Add witness relationship tracking'
    ]
  },
  trust_alignment: {
    module: 'trusttensor',
    tasks: [
      'Rename to Competence/Reliability/Transparency',
      'Add V3 (Value tensor) implementation',
      'Implement trust-as-gravity calculations',
      'Add trust degradation over distance',
      'Create witness validation system'
    ]
  },
  atp_adp_cycle: {
    module: 'energycycle',
    tasks: [
      'Align with Web4 ATP/ADP semantics',
      'Implement R6 framework validation',
      'Add proof-of-performance generation',
      'Create energy-to-trust conversion',
      'Build recursive improvement cycles'
    ]
  },
  mrh_integration: {
    module: 'componentregistry',
    tasks: [
      'Add RDF graph storage',
      'Implement context horizon calculations',
      'Create fractal boundary management',
      'Build witness network topology',
      'Add broadcast propagation system'
    ]
  },
  society_governance: {
    module: 'pairingqueue',
    tasks: [
      'Transform to society membership queue',
      'Add citizen role management',
      'Implement law oracle integration',
      'Create birth certificate system',
      'Add governance voting mechanisms'
    ]
  }
};

// Swarm configuration for Cosmos work
const COSMOS_SWARM_CONFIG = {
  queens: [
    {
      name: 'Cosmos-LCT-Queen',
      module: 'lctmanager',
      workers: ['go-developer', 'proto-designer', 'keeper-specialist', 'test-writer']
    },
    {
      name: 'Cosmos-Trust-Queen',
      module: 'trusttensor',
      workers: ['tensor-mathematician', 'go-developer', 'metrics-designer', 'validator']
    },
    {
      name: 'Cosmos-Energy-Queen',
      module: 'energycycle',
      workers: ['tokenomics-expert', 'go-developer', 'cycle-designer', 'auditor']
    },
    {
      name: 'Cosmos-MRH-Queen',
      module: 'componentregistry',
      workers: ['graph-theorist', 'go-developer', 'rdf-specialist', 'network-engineer']
    },
    {
      name: 'Cosmos-Society-Queen',
      module: 'pairingqueue',
      workers: ['governance-designer', 'go-developer', 'oracle-builder', 'test-writer']
    }
  ]
};

/**
 * Execute Web4 compliance task on Cosmos module
 */
function executeCosmosTask(module, task, queen, worker) {
  console.log(`\nüîß ${worker} working on: ${task}`);
  console.log(`   Module: ${module}`);
  
  const modulePath = MODULES[module];
  
  // Witness the action
  witnessAction(`${queen}:${worker}`, `Starting: ${task} in ${module}`, 2);
  
  try {
    // Based on the task, generate actual code modifications
    switch (task) {
      case 'Add Ed25519/X25519 cryptographic identity':
        implementEd25519Identity(modulePath);
        break;
        
      case 'Implement MRH graph structure':
        implementMRHGraph(modulePath);
        break;
        
      case 'Rename to Competence/Reliability/Transparency':
        renameTrustDimensions(modulePath);
        break;
        
      case 'Add RDF graph storage':
        implementRDFStorage(modulePath);
        break;
        
      case 'Transform to society membership queue':
        transformToSocietyQueue(modulePath);
        break;
        
      default:
        // Create TODO file for complex tasks
        createTaskTODO(modulePath, task);
    }
    
    // Witness completion
    witnessAction(`${queen}:${worker}`, `Completed: ${task} in ${module}`, 0);
    console.log(`   ‚úÖ Task completed in ${module}`);
    
    return true;
  } catch (error) {
    console.error(`   ‚ùå Error: ${error.message}`);
    return false;
  }
}

/**
 * Implement Ed25519 identity in LCT manager
 */
function implementEd25519Identity(modulePath) {
  const lctTypesPath = path.join(modulePath, 'types/lct.go');
  
  if (fs.existsSync(lctTypesPath)) {
    let content = fs.readFileSync(lctTypesPath, 'utf8');
    
    // Add Ed25519 fields to LCT struct if not present
    if (!content.includes('Ed25519PublicKey')) {
      const enhancement = `
// Web4 Compliance: Cryptographic Identity
type LCTIdentity struct {
    Ed25519PublicKey []byte ` + '`json:"ed25519_public_key"`' + `
    X25519PublicKey  []byte ` + '`json:"x25519_public_key"`' + `
    BindingSignature []byte ` + '`json:"binding_signature"`' + `
    EntityType       string ` + '`json:"entity_type"` + '` // human, ai, role, society, dictionary
}

// MRH (Markov Relevancy Horizon) for Web4
type MRH struct {
    Bound      []string ` + '`json:"bound"`' + `
    Paired     []string ` + '`json:"paired"`' + `
    Witnessing []string ` + '`json:"witnessing"`' + `
    Broadcast  []string ` + '`json:"broadcast"`' + `
}
`;
      
      // Insert after package declaration
      content = content.replace('package types', 'package types\n' + enhancement);
      fs.writeFileSync(lctTypesPath, content);
      
      console.log('   ‚úì Added Ed25519/X25519 identity to LCT types');
    }
  } else {
    // Create the types file
    fs.mkdirSync(path.join(modulePath, 'types'), { recursive: true });
    fs.writeFileSync(lctTypesPath, generateLCTTypes());
    console.log('   ‚úì Created LCT types with Ed25519 identity');
  }
}

/**
 * Implement MRH graph structure
 */
function implementMRHGraph(modulePath) {
  const mrhPath = path.join(modulePath, 'keeper/mrh.go');
  
  const mrhImplementation = `package keeper

import (
    "encoding/json"
    sdk "github.com/cosmos/cosmos-sdk/types"
)

// MRH operations for Web4 compliance
func (k Keeper) SetMRH(ctx sdk.Context, lctID string, mrh MRH) error {
    store := ctx.KVStore(k.storeKey)
    key := []byte("mrh:" + lctID)
    value, err := json.Marshal(mrh)
    if err != nil {
        return err
    }
    store.Set(key, value)
    return nil
}

func (k Keeper) GetMRH(ctx sdk.Context, lctID string) (MRH, error) {
    store := ctx.KVStore(k.storeKey)
    key := []byte("mrh:" + lctID)
    value := store.Get(key)
    
    var mrh MRH
    if value == nil {
        return mrh, nil
    }
    
    err := json.Unmarshal(value, &mrh)
    return mrh, err
}

func (k Keeper) AddWitness(ctx sdk.Context, lctID string, witnessLCT string) error {
    mrh, err := k.GetMRH(ctx, lctID)
    if err != nil {
        return err
    }
    
    mrh.Witnessing = append(mrh.Witnessing, witnessLCT)
    return k.SetMRH(ctx, lctID, mrh)
}
`;
  
  fs.mkdirSync(path.join(modulePath, 'keeper'), { recursive: true });
  fs.writeFileSync(mrhPath, mrhImplementation);
  console.log('   ‚úì Implemented MRH graph in keeper');
}

/**
 * Rename trust tensor dimensions for Web4
 */
function renameTrustDimensions(modulePath) {
  const trustTypesPath = path.join(modulePath, 'types/trust_tensor.go');
  
  if (fs.existsSync(trustTypesPath)) {
    let content = fs.readFileSync(trustTypesPath, 'utf8');
    
    // Rename dimensions
    content = content.replace(/Talent/g, 'Competence');
    content = content.replace(/Training/g, 'Reliability');
    content = content.replace(/Temperament/g, 'Transparency');
    
    // Add V3 Value tensor
    if (!content.includes('ValueTensor')) {
      content += `
// Web4 V3: Value Tensor
type ValueTensor struct {
    Economic  sdk.Dec ` + '`json:"economic"`' + `
    Social    sdk.Dec ` + '`json:"social"`' + `
    Knowledge sdk.Dec ` + '`json:"knowledge"`' + `
}
`;
    }
    
    fs.writeFileSync(trustTypesPath, content);
    console.log('   ‚úì Aligned trust tensor with Web4 T3/V3');
  }
}

/**
 * Implement RDF graph storage
 */
function implementRDFStorage(modulePath) {
  const rdfPath = path.join(modulePath, 'keeper/rdf_graph.go');
  
  const rdfImplementation = `package keeper

import (
    "fmt"
    sdk "github.com/cosmos/cosmos-sdk/types"
)

// RDF Triple for MRH graph storage
type Triple struct {
    Subject   string
    Predicate string
    Object    string
}

// Store RDF triple for MRH relationships
func (k Keeper) StoreTriple(ctx sdk.Context, triple Triple) {
    store := ctx.KVStore(k.storeKey)
    key := []byte(fmt.Sprintf("rdf:%s:%s:%s", 
        triple.Subject, triple.Predicate, triple.Object))
    store.Set(key, []byte("1"))
}

// Query RDF triples by subject
func (k Keeper) GetTriplesBySubject(ctx sdk.Context, subject string) []Triple {
    store := ctx.KVStore(k.storeKey)
    iterator := sdk.KVStorePrefixIterator(store, []byte("rdf:"+subject+":"))
    defer iterator.Close()
    
    var triples []Triple
    for ; iterator.Valid(); iterator.Next() {
        // Parse key to reconstruct triple
        key := string(iterator.Key())
        // Implementation details...
    }
    return triples
}
`;
  
  fs.writeFileSync(rdfPath, rdfImplementation);
  console.log('   ‚úì Implemented RDF graph storage');
}

/**
 * Transform pairing queue to society membership
 */
function transformToSocietyQueue(modulePath) {
  const societyPath = path.join(modulePath, 'types/society.go');
  
  const societyTypes = `package types

import sdk "github.com/cosmos/cosmos-sdk/types"

// Society membership for Web4 ACT
type SocietyMembership struct {
    SocietyLCT    string   ` + '`json:"society_lct"`' + `
    MemberLCT     string   ` + '`json:"member_lct"`' + `
    CitizenRole   string   ` + '`json:"citizen_role"`' + `
    Rights        []string ` + '`json:"rights"`' + `
    Responsibilities []string ` + '`json:"responsibilities"`' + `
    JoinedAt      int64    ` + '`json:"joined_at"`' + `
    ATP_Allocated sdk.Int  ` + '`json:"atp_allocated"`' + `
}

// Birth certificate for new entities
type BirthCertificate struct {
    EntityLCT  string   ` + '`json:"entity_lct"`' + `
    EntityType string   ` + '`json:"entity_type"`' + `
    Society    string   ` + '`json:"society"`' + `
    IssuedBy   string   ` + '`json:"issued_by"`' + `
    IssuedAt   int64    ` + '`json:"issued_at"`' + `
    Witnesses  []string ` + '`json:"witnesses"`' + `
}
`;
  
  fs.writeFileSync(societyPath, societyTypes);
  console.log('   ‚úì Transformed to society membership system');
}

/**
 * Create TODO file for complex tasks
 */
function createTaskTODO(modulePath, task) {
  const todoPath = path.join(modulePath, 'TODO_WEB4.md');
  
  let content = '';
  if (fs.existsSync(todoPath)) {
    content = fs.readFileSync(todoPath, 'utf8');
  }
  
  content += `\n## TODO: ${task}\n`;
  content += `- [ ] Research implementation requirements\n`;
  content += `- [ ] Design integration with existing code\n`;
  content += `- [ ] Implement core functionality\n`;
  content += `- [ ] Add unit tests\n`;
  content += `- [ ] Document changes\n\n`;
  
  fs.writeFileSync(todoPath, content);
  console.log(`   ‚úì Created TODO for: ${task}`);
}

/**
 * Generate LCT types file
 */
function generateLCTTypes() {
  return `package types

import sdk "github.com/cosmos/cosmos-sdk/types"

// Web4 Compliant LCT (Linked Context Token)
type LCT struct {
    ID               string        ` + '`json:"id"`' + `
    EntityType       string        ` + '`json:"entity_type"`' + ` 
    Identity         LCTIdentity   ` + '`json:"identity"`' + `
    MRH              MRH           ` + '`json:"mrh"`' + `
    BirthCertificate *BirthCertificate ` + '`json:"birth_certificate,omitempty"`' + `
    CreatedAt        int64         ` + '`json:"created_at"`' + `
    UpdatedAt        int64         ` + '`json:"updated_at"`' + `
}

// Cryptographic Identity for Web4
type LCTIdentity struct {
    Ed25519PublicKey []byte ` + '`json:"ed25519_public_key"`' + `
    X25519PublicKey  []byte ` + '`json:"x25519_public_key"`' + `
    BindingSignature []byte ` + '`json:"binding_signature"`' + `
}

// Markov Relevancy Horizon
type MRH struct {
    Bound      []string ` + '`json:"bound"`' + `
    Paired     []string ` + '`json:"paired"`' + `
    Witnessing []string ` + '`json:"witnessing"`' + `
    Broadcast  []string ` + '`json:"broadcast"`' + `
}

type BirthCertificate struct {
    Society          string   ` + '`json:"society"`' + `
    Rights           []string ` + '`json:"rights"`' + `
    Responsibilities []string ` + '`json:"responsibilities"`' + `
    InitialATP       sdk.Int  ` + '`json:"initial_atp"`' + `
    IssuedAt         int64    ` + '`json:"issued_at"`' + `
}
`;
}

/**
 * Witness an action (simplified for Cosmos context)
 */
function witnessAction(role, action, atpCost) {
  const witnessLog = path.join(LEDGER_BASE, 'witness.log');
  const witness = {
    timestamp: new Date().toISOString(),
    role: role,
    action: action,
    atp_cost: atpCost
  };
  
  fs.appendFileSync(witnessLog, JSON.stringify(witness) + '\n');
}

/**
 * Execute Cosmos ledger swarm
 */
async function executeCosmosSwarm() {
  console.log('üöÄ Starting Web4 Compliance Implementation on Cosmos SDK');
  console.log('=' + '='.repeat(60));
  console.log(`Working directory: ${LEDGER_BASE}`);
  
  // Check if we're in the right place
  if (!fs.existsSync(X_MODULE_PATH)) {
    console.error('‚ùå Error: x/ modules directory not found');
    console.error(`Expected at: ${X_MODULE_PATH}`);
    return;
  }
  
  console.log('\nüì¶ Found Cosmos modules:');
  Object.entries(MODULES).forEach(([name, path]) => {
    const exists = fs.existsSync(path);
    console.log(`   ${exists ? '‚úì' : '‚úó'} ${name}: ${path}`);
  });
  
  // Execute tasks for each module
  for (const [category, config] of Object.entries(WEB4_TASKS)) {
    const queen = COSMOS_SWARM_CONFIG.queens.find(q => q.module === config.module);
    
    if (!queen) continue;
    
    console.log(`\nüëë ${queen.name} starting ${category} tasks`);
    
    for (let i = 0; i < config.tasks.length && i < queen.workers.length; i++) {
      const task = config.tasks[i];
      const worker = queen.workers[i];
      
      await executeCosmosTask(config.module, task, queen.name, worker);
      
      // Small delay between tasks
      await new Promise(resolve => setTimeout(resolve, 500));
    }
  }
  
  console.log('\n‚úÖ Web4 compliance implementation started');
  console.log('Check witness.log for action history');
  console.log('Review TODO_WEB4.md files in each module for remaining work');
  
  // Run tests if available
  console.log('\nüß™ Running module tests...');
  try {
    execSync('cd ' + LEDGER_BASE + ' && go test ./x/...', { stdio: 'inherit' });
  } catch (error) {
    console.log('‚ö†Ô∏è  Some tests may need updating for Web4 compliance');
  }
}

// Main execution
if (require.main === module) {
  executeCosmosSwarm().catch(console.error);
}

module.exports = { executeCosmosSwarm };